# opensdmx

./: .gitignore  LOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  claude.yml  constraints-archive.yml  latency-monitor.yml
data/constraints/: README.md  eurostat.parquet  eurostat_status.csv  istat.parquet  istat_status.csv  istat_territorial.csv
docs/: PRD.md  architecture.md  cache.md  cli-test-examples.md  evaluation-v0.14.0.md  evaluation-v0.2.6.md  evaluation.md  future-ideas.md  provider-proposals.md  providers.md  release.md  specs.md  validation-statgpt.md
docs/inps/: middleware-api.md
docs/istat/: future-ideas.md  hub-api.md
docs/mcp-references/: README.md  oecd-mcp-llm-instructions.md  worldbank-data360-system-prompt.md
docs/skill/: README.md
openspec/changes/archive/2026-03-31-opensdmx-generalize/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-31-opensdmx-generalize/specs/provider-system/: spec.md
openspec/changes/archive/2026-03-31-portals-json/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-01-add-constraints-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-01-add-constraints-command/specs/constraints-command/: spec.md
openspec/specs/portal-config/: spec.md
openspec/specs/provider-cache/: spec.md
output/: latency.jsonl
scripts/: README.md  constraints_archive.py  monitor_latency.py  probe_contentconstraint.py  probe_providers.sh  test_istat_endpoints.py
scripts/eurostat-rss/: README.md  wrangler.toml
scripts/eurostat-rss/src/: index.js
skills/release/: SKILL.md
skills/sdmx-explorer/: SKILL.md
skills/sdmx-explorer/references/: cli-templates.md  color-guide.md  duckdb-setup.md  istat-flow.md  providers.md  thematic-tree.md  visualization.md  worldbank-flow.md
src/istatpy/: base.py  cli.py  db_cache.py  discovery.py  embed.py
src/opensdmx/: __init__.py  ai.py  base.py  cache_config.py  categories.py  cli.py  db_cache.py  discovery.py  embed.py  guide.py  hub.py  inps.py  portals.json  retrieval.py  utils.py  which.py
tasks/: todo.md
tests/: test_base.py  test_categories.py  test_cli.py  test_codelist_hierarchy.py  test_db_cache.py  test_discovery.py  test_http.py  test_hub.py  test_inps.py  test_labels.py  test_phase1_regressions.py  test_phase2_dedup.py  test_time_period.py  test_utils.py
