[project]
name = "opensdmx"
version = "0.3.31"
description = "Simple Python interface to any SDMX 2.1 REST API (Eurostat, ISTAT, and more)"
readme = "README.md"
authors = [
    { name = "Andrea Borruso", email = "aborruso@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["sdmx", "statistics", "eurostat", "istat", "open-data", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "platformdirs>=4.9.4",
    "plotnine>=0.15.3",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.optional-dependencies]
guide = [
    "chatlas[google]>=0.7",
    "questionary>=2.1.1",
]

[project.scripts]
opensdmx = "opensdmx:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.11", "opensdmx[guide]"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["E402"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
