[project]
name = "opensdmx"
version = "0.13.0"
description = "Simple Python interface to any SDMX 2.1 REST API (Eurostat, ISTAT, and more)"
readme = "README.md"
authors = [
    { name = "Andrea Borruso", email = "aborruso@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["sdmx", "statistics", "eurostat", "istat", "open-data", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx[socks]>=0.28.1",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "platformdirs>=4.9.4",
    "plotnine>=0.15.3",
    "portalocker>=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
    "duckdb>=1.5.2",
]

[project.optional-dependencies]
guide = [
    "chatlas[google]>=0.7",
    "questionary>=2.1.1",
]

[project.scripts]
opensdmx = "opensdmx:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.11",
    "types-PyYAML",
    "lxml-stubs",
    "pandas-stubs",
    "opensdmx[guide]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.mypy]
python_version = "3.12"
files = ["src/opensdmx"]
strict = true

# Third-party libraries without type stubs.
[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "plotnine.*",
    "questionary.*",
    "chatlas.*",
    "matplotlib.*",
]
ignore_missing_imports = true

# Gradual strict adoption: modules not yet fully annotated are exempted from the
# strict-only checks and converted one at a time. Remove a module from this list
# once it is strict-clean. Remaining: categories, utils, db_cache, base,
# discovery, cli.
[[tool.mypy.overrides]]
module = [
    "opensdmx.utils",
    "opensdmx.db_cache",
    "opensdmx.base",
    "opensdmx.discovery",
    "opensdmx.cli",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
